--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
+
 <resources>
     <string name="app_name">Diary</string>
+
+    <string name="insulin">Insulin</string>
+    <string name="profile">Profile</string>
+    <string name="sugar">Sugar</string>
+
+
+
+    <!-- Record -->
+    <string name="add_record">Add Record</string>
+    <string name="title_dynamicfeature">core</string>
 </resources>
