--- a/auth/src/main/res/values/strings.xml
+++ b/auth/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="submit">Submit</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
